# Gravity-OS

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml
docs/: GRAVITY-NEXT-STACK-WORKFLOW.md  GRAVITY-PARITY-MATRIX.md  GRAVITY-UX-WORKFLOW.md  MACOS-PARITY-SPEC.md  MOTION.md
scripts/: native-shell-smoke.ps1  stage-webview2-loader.ps1  test-rust.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: hooks.nsi
src-tauri/resources/: common-controls.manifest
src-tauri/src/: commands.rs  geometry.rs  lib.rs  main.rs  settings.rs  shell.rs
src-tauri/src/platform/: appindex.rs  audio.rs  brightness.rs  events.rs  input.rs  media.rs  mock.rs  mod.rs  network.rs  notifications.rs  radio.rs  shell_control.rs  snap.rs  thumbnails.rs  windowing.rs  windows.rs
src/__tests__/: actions.test.ts  customization.test.ts  dock.test.ts  ipc.test.ts  mock-shell.test.ts  notification-history.test.ts  physics.test.ts  search.test.ts  shortcuts.test.ts  well-selection.test.ts
src/components/: AppTile.tsx  Icons.tsx  apptile.css
src/lib/: actions.ts  customization.ts  dock.ts  icons.ts  notificationHistory.ts  physics.ts  rng.ts  search.ts  shortcuts.ts  wallpapers.ts  well-selection.ts  wells.ts  win.ts
src/shell/: context.tsx  ipc.ts  mock.ts  tauri.ts  types.ts
src/styles/: base.css  fonts.css  tokens.css
src/surfaces/: AboutGravity.tsx  AppLibrary.tsx  Constellation.tsx  Core.tsx  CustomizationCenter.tsx  DeepField.tsx  DemoWindows.tsx  GravityWells.tsx  Horizon.tsx  Orbit.tsx  OverlayHost.tsx  Pulse.tsx  Singularity.tsx  SnapPreview.tsx  Stage.tsx  WindowStudio.tsx  about-gravity.css  app-library.css  constellation.css  core.css  customization-center.css  deepfield.css  demowindows.css  gravity-wells.css  horizon.css  orbit.css  pulse.css  singularity.css  snap-preview.css  stage.css  window-studio.css
